fixed scroll button hidden on small devices

--- a/src/Components/scrolltop.css
+++ b/src/Components/scrolltop.css
@@ -24,3 +24,10 @@
     list-style: none;
   }
   
+  /* =============================== MEDIA QUERIES (SMALL DEVICES) =============================== */
+
+@media screen and (max-width: 600px) {
+  .scrolltop {
+    bottom: 6rem;
+  }
+}
